--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -39,7 +39,7 @@
     "dotenv": "^16.0.0",
     "elasticsearch": "^16.7.3",
     "es6": "npm:@elastic/elasticsearch@^6.8",
-    "es7": "npm:@elastic/elasticsearch@~7.17",
+    "es7": "npm:@elastic/elasticsearch@^7.17",
     "es8": "npm:@elastic/elasticsearch@~8.2.1",
     "fetch3": "npm:node-fetch@^3",
     "formidable": "^2.0.1",
@@ -62,6 +62,7 @@
     "nanoid": "^3.3.4",
     "nats": "^2.7.1",
     "node-schedule": "^2.1.0",
+    "pdfmake": "^0.2.5",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -83,6 +84,7 @@
     "@types/levelup": "^5.1.1",
     "@types/node-fetch": "2",
     "@types/node-schedule": "^2.1.0",
+    "@types/pdfmake": "^0.2.0",
     "@types/pg": "^8.6.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
