--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.5.1",
     "@ncf/microkernel": "*",
+    "@react-pdf/renderer": "^2.3.0",
     "@types/formidable": "^2.0.5",
     "@types/ink-select-input": "^3.0.1",
     "amqplib": "^0.8.0",
