--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.5.1",
+    "@mikro-orm/core": "^5.3.1",
+    "@mikro-orm/postgresql": "^5.3.1",
     "@ncf/microkernel": "*",
     "@react-pdf/renderer": "^2.3.0",
     "@types/formidable": "^2.0.5",
