--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -44,6 +44,7 @@
     "es6": "npm:@elastic/elasticsearch@^6.8",
     "es7": "npm:@elastic/elasticsearch@^7.17",
     "es8": "npm:@elastic/elasticsearch@~8.2.1",
+    "excel4node": "^1.8.0",
     "fetch3": "npm:node-fetch@^3",
     "formidable": "^2.0.1",
     "ink": "^3.2.0",
