--- a/packages/mw-react-server-render/package.json
+++ b/packages/mw-react-server-render/package.json
@@ -20,10 +20,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/react-dom": "^18.0.4",
+    "@types/react-helmet": "^6.1.5",
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
