--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -33,6 +33,7 @@
     "@mikro-orm/postgresql": "^5.3.1",
     "@ncf/microkernel": "*",
     "@react-pdf/renderer": "^2.3.0",
+    "@stitches/react": "^1.2.8",
     "@types/formidable": "^2.0.5",
     "@types/ink-select-input": "^3.0.1",
     "amqplib": "^0.8.0",
@@ -54,6 +55,8 @@
     "ink-table": "^3.0.0",
     "ink-text-input": "^4.0.3",
     "ioredis": "^5.0.3",
+    "jss": "^10.9.2",
+    "jss-preset-default": "^10.9.2",
     "kafkajs": "^2.0.2",
     "koa-send": "^5.0.1",
     "koa2-proxy-middleware": "^0.0.4",
@@ -65,16 +68,19 @@
     "mysql2": "^2.3.3",
     "nanoid": "^3.3.4",
     "nats": "^2.7.1",
+    "neo4j-driver": "^5.1.0",
     "node-schedule": "^2.1.0",
     "pdfmake": "^0.2.5",
     "pg": "^8.7.3",
     "prisma": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jss": "^10.9.2",
     "reflect-metadata": "^0.1.13",
     "rethinkdb": "^2.4.2",
     "rocksdb": "^5.2.1",
     "sharp": "^0.30.3",
+    "styled-components": "^5.3.6",
     "ts-node": "^10.7.0",
     "typeorm": "^0.3.3",
     "typescript": "^4.6.2",
@@ -96,6 +102,7 @@
     "@types/rethinkdb": "^2.3.17",
     "@types/rocksdb": "^3.0.1",
     "@types/sharp": "^0.30.0",
+    "@types/styled-components": "^5.1.26",
     "@types/tap": "^15.0.7",
     "@types/x-ray": "^2.3.3",
     "tap": "^16.2.0"
