--- a/packages/mw-react-server-render/package.json
+++ b/packages/mw-react-server-render/package.json
@@ -31,6 +31,7 @@
   },
   "peerDependencies": {
     "@ncf/microkernel": "*",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "@stitches/react": "^1.2.8"
   }
 }
