--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "packages/baas-typeorm",
     "packages/baas-pg",
     "packages/baas-ioredis",
+    "packages/baas-neo4j-driver",
     "packages/baas-node-fetch",
     "packages/examples",
     "packages/loader-cfg-json5",
@@ -29,8 +30,7 @@
     "ts-node": "^10.7.0",
     "typescript": "4.6.2"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "clean": "lerna run clean --stream",
     "build": "lerna run build --stream",
