--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.5.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@mikro-orm/core": "^5.3.1",
     "@mikro-orm/postgresql": "^5.3.1",
     "@ncf/microkernel": "*",
