添加 pdfkdf 生成 PDF 范例

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -72,6 +72,7 @@
     "nats": "^2.7.1",
     "neo4j-driver": "^5.1.0",
     "node-schedule": "^2.1.0",
+    "pdfkit": "^0.13.0",
     "pdfmake": "^0.2.5",
     "pg": "^8.7.3",
     "prisma": "^4.2.1",
