--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -48,6 +48,7 @@
     "es7": "npm:@elastic/elasticsearch@^7.17",
     "es8": "npm:@elastic/elasticsearch@~8.2.1",
     "excel4node": "^1.8.0",
+    "express-to-koa": "^2.0.0",
     "fetch3": "npm:node-fetch@^3",
     "formidable": "^2.0.1",
     "ink": "^3.2.0",
@@ -76,6 +77,7 @@
     "pdfmake": "^0.2.5",
     "pg": "^8.7.3",
     "prisma": "^4.2.1",
+    "prom-client": "12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.9.2",
@@ -84,6 +86,7 @@
     "rocksdb": "^5.2.1",
     "sharp": "^0.30.3",
     "styled-components": "^5.3.6",
+    "swagger-stats": "^0.99.2",
     "ts-node": "^10.7.0",
     "typeorm": "^0.3.3",
     "typescript": "^4.6.2",
